--- a/compose.yaml
+++ b/compose.yaml
@@ -5,7 +5,7 @@ services:
     image: ghcr.io/jpubdocker/echo:v0.1.0
 
   nginx:
-    build: ./nginx
+    build: nginx
     depends_on:
       - echo
     ports:
